Details
-
Bug
-
Status: Resolved
-
P3
-
Resolution: Fixed
-
13, 14
-
b20
Description
Reliably reproduces, but only with Traversal:
$ CONF=linux-x86_64-server-fastdebug make images run-test TEST=compiler/jsr292/CallSiteDepContextTest.java TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCMode=traversal"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/classfile/javaClasses.cpp:3784), pid=24418, tid=24507
# Error: assert(java_lang_invoke_CallSite::is_instance(call_site)) failed
--------------- T H R E A D ---------------
Current thread (0x00007fc104002800): GCTaskThread "Shenandoah GC Threads#2" [stack: 0x00007fc108f47000,0x00007fc109047000] [id=24507]
Stack: [0x00007fc108f47000,0x00007fc109047000], sp=0x00007fc1090455f0, free space=1017k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18feaef] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x37f
V [libjvm.so+0x18ff8ef] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xa8ba11] report_vm_error(char const*, int, char const*, char const*, ...)+0x111
V [libjvm.so+0xe23fcf] java_lang_invoke_CallSite::context_no_keepalive(oop)+0xaf
V [libjvm.so+0x1352e9b] MethodHandles::clean_dependency_context(oop)+0x3b
V [libjvm.so+0x13aae01] nmethod::flush_dependencies(bool)+0x251
V [libjvm.so+0x13aaf99] nmethod::make_unloaded()+0x79
V [libjvm.so+0x1486855] CodeCacheUnloadingTask::work(unsigned int)+0x285
V [libjvm.so+0x168f3db] ShenandoahClassUnloadingTask::work(unsigned int)+0x2b
V [libjvm.so+0x1973850] GangWorker::loop()+0xe0
V [libjvm.so+0x183a556] Thread::call_run()+0xf6
V [libjvm.so+0x14391ee] thread_native_entry(Thread*)+0x10e
$ CONF=linux-x86_64-server-fastdebug make images run-test TEST=compiler/jsr292/CallSiteDepContextTest.java TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCMode=traversal"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/classfile/javaClasses.cpp:3784), pid=24418, tid=24507
# Error: assert(java_lang_invoke_CallSite::is_instance(call_site)) failed
--------------- T H R E A D ---------------
Current thread (0x00007fc104002800): GCTaskThread "Shenandoah GC Threads#2" [stack: 0x00007fc108f47000,0x00007fc109047000] [id=24507]
Stack: [0x00007fc108f47000,0x00007fc109047000], sp=0x00007fc1090455f0, free space=1017k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18feaef] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x37f
V [libjvm.so+0x18ff8ef] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xa8ba11] report_vm_error(char const*, int, char const*, char const*, ...)+0x111
V [libjvm.so+0xe23fcf] java_lang_invoke_CallSite::context_no_keepalive(oop)+0xaf
V [libjvm.so+0x1352e9b] MethodHandles::clean_dependency_context(oop)+0x3b
V [libjvm.so+0x13aae01] nmethod::flush_dependencies(bool)+0x251
V [libjvm.so+0x13aaf99] nmethod::make_unloaded()+0x79
V [libjvm.so+0x1486855] CodeCacheUnloadingTask::work(unsigned int)+0x285
V [libjvm.so+0x168f3db] ShenandoahClassUnloadingTask::work(unsigned int)+0x2b
V [libjvm.so+0x1973850] GangWorker::loop()+0xe0
V [libjvm.so+0x183a556] Thread::call_run()+0xf6
V [libjvm.so+0x14391ee] thread_native_entry(Thread*)+0x10e
Attachments
Issue Links
- relates to
-
JDK-8231293 Shenandoah: Traversal should not revive dead weak roots
-
- Resolved
-
-
JDK-8232747 Shenandoah: Concurrent GC should deactivate SATB before processing weak roots
-
- Resolved
-
-
JDK-8212996 Use AS_NO_KEEPALIVE when accessing dead java.lang.invoke.CallSites during nmethod unloading
-
- Resolved
-
-
JDK-8232380 Shenandoah: Test compiler/jsr292/CallSiteDepContextTest.java hangs with traversal mode
-
- Closed
-
-
JDK-8234399 Shenandoah: Cleanup native load barrier
-
- Resolved
-