8231999: Shenandoah: Traversal failed compiler/jsr292/CallSiteDepContextTest.java

Reviewed-by: rkennke